--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,16 @@
 Package: myshinyapp
 Title: PKG_TITLE
 Version: 0.0.0.9000
-Author@R:
-  c(person(given = "Eric",
-           family = "Bautista",
-           role = c("aut", "cre"),
-           email = "ericbaufa10@gmail.com"))
 Description: PKG_DESC.
 License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.1),
     golem (>= 0.3.2),
+    magrittr,
     shiny (>= 1.7.1)
+Author@R:c(person(given = "Eric", family = "Bautista", role = c("aut",
+    "cre"), email = "ericbaufa10@gmail.com"))
+Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
